# Tetris_Game

./: CMakeLists.txt  Game_Tetris_Kursova.sln  README.md  best_result_tetris.txt  main.cpp
Game_Tetris_Kursova/: Designe.cpp  Designe.h  Game.cpp  Game.h  Game_Tetris_Kursova.rc  Game_Tetris_Kursova.vcxproj  Game_Tetris_Kursova.vcxproj.filters  Main.cpp  resource.h
